# AI-Value-Investor

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  PROJECT_MAP.md  README.md  pyproject.toml
.agent/workflows/: update-project-map.md
.claude/: SETUP_COMPLETE.md  settings.json
.github/workflows/: daily_scan.yml  weekly_report.yml
Tech Roadmap/: PROJECT_ROADMAP.md  V2.0.0 Plan.md  V3.0.0 Plan.md  contrarian-agent-design.md
config/: README.md  industry_profiles.yaml  llm_config.yaml  screening_rules.yaml  watchlist.yaml
docs/: quality-layer-usage.md
docs/plans/: 2026-03-06-data-quality-layer-design.md  2026-03-06-data-quality-layer.md  2026-03-07-contrarian-agent-implementation.md  2026-03-07-contrarian-agent-plan.md  2026-03-07-report-generator-design.md  2026-03-07-report-generator-plan.md  2026-03-08-data-quality-optimization-design.md  2026-03-08-data-quality-optimization-plan.md  2026-03-08-final-implementation-status.md  2026-03-08-report-generator-implementation-complete.md  2026-03-08-roadmap-implementation-status.md
scripts/: batch_fetch.sh  batch_report.sh  update_map_hint.py
src/: __init__.py  main.py
src/agents/: README.md  __init__.py  ben_graham.py  chapter_context.py  comparables.py  confidence.py  contrarian.py  fundamentals.py  industry_classifier.py  industry_engine.py  wacc.py  (+9 more)
templates/: report_template.md
tests/: test_ben_graham.py  test_chapter_context.py  test_comparables.py  test_confidence.py  test_contrarian.py  test_contrarian_integration.py  test_data_sources.py  test_distressed_valuation.py  test_fundamentals.py  test_industry_classifier.py  test_industry_confidence.py  test_industry_engine.py  test_macro_module.py  test_predictions.py  test_profit_warning.py  test_quality.py  test_report_chapters.py  test_report_config.py  test_report_integration.py  test_sentiment.py  test_signal_aggregator.py  test_valuation.py  test_wacc.py
(+53 files in other folders)
